[package]
name = "dca"
version = "1.0.0"
authors = ["Peter Opatril <petr.opatril@firma.seznam.cz>"]
edition = "2018"

[features]
default = ["cli", "logging"]
# Build command line frontend to the library
cli = ["clap", "env_logger", "logging"]
# Use standard logging facilities
logging = ["log"]

[[bin]]
name = "dca"
required-features = ["cli"]

[dependencies]
clap = {version = "2.21.1", optional = true}
env_logger = {version = ">=0.5, <0.9", optional = true}
log = {version = "0.4", optional = true}

[dev-dependencies]
tempfile = "3.0.2"
