[package]
name = "dca"
version = "1.0.0"
authors = ["Peter Opatril"]
edition = "2018"
readme = "README.md"
license = "MIT"
license-file = "LICENCE.txt"
keywords = ["archive", "cat", "tar"]
categories = ["command-line-utilities", "encoding"]
description = "Implementation of minimalistic format for combining files into one"
repository = "https://github.com/OpatrilPeter/rs-dca/"

[features]
default = ["cli", "logging"]
# Build command line frontend to the library
cli = ["clap", "env_logger", "logging", "humansize"]
# Use standard logging facilities
logging = ["log"]

[dependencies]
clap = {version = "2.21.1", optional = true}
env_logger = {version = ">=0.5, <0.9", optional = true}
humansize = {version = "1.0", optional = true}
log = {version = "0.4", optional = true}

[dev-dependencies]
assert_cmd = "1.0"
assert_fs = "1.0"
predicates = "1.0"
